# electrum2descriptors

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: bin.rs  electrum_extended_priv_key.rs  electrum_extended_pub_key.rs  electrum_wallet_file.rs  electrumextendedkey.rs  electrumextendedprivkey.rs  electrumextendedpubkey.rs  errors.rs  lib.rs  main.rs
tests/: wallets2descriptors.rs
tests/wallets/: default_legacy  default_legacy_watch  default_segwit  imported_addr  imported_privkey  multisig_hw_segwit  multisig_legacy  multisig_segwit  multisig_wrapped_watch
