[package]
name = "electrum2descriptors"
version = "0.4.1"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
description = "Converts electrum xpubs (like vpub, ypub...) into output descriptors"
license = "MIT"
homepage = "https://github.com/RCasatta/electrum2descriptors"
documentation = "https://docs.rs/electrum2descriptors/"
repository = "https://github.com/RCasatta/electrum2descriptors"
keywords = ["bitcoin", "electrum", "descriptors"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libelectrum2descriptors"
path = "src/lib.rs"

[[bin]]
name = "electrum2descriptors"
path = "src/bin.rs"

[dependencies]
bitcoin = "0.27"
serde_json = "1"
regex = "1"

[dev-dependencies]
miniscript = "6"
bdk = "0.15"
rstest = "0.11"
