[package]
name = "electrum2descriptors"
version = "0.7.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"
description = "Converts electrum xpubs (like vpub, ypub...) into output descriptors"
license = "MIT"
homepage = "https://github.com/RCasatta/electrum2descriptors"
documentation = "https://docs.rs/electrum2descriptors/"
repository = "https://github.com/RCasatta/electrum2descriptors"
keywords = ["bitcoin", "electrum", "descriptors"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libelectrum2descriptors"
path = "src/lib.rs"

[[bin]]
name = "electrum2descriptors"
path = "src/bin.rs"

[dependencies]
bitcoin = "0.32"
thiserror = "2"

# Optional dependencies
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
regex = { version = "1", optional = true }

[dev-dependencies]
miniscript = "12"
bdk_wallet = "1.0.0"
rstest = "0.17"
tempfile = "3.5"

[features]
default = [ "wallet_file" ]
wallet_file = [ "serde", "serde_json", "regex"]
